# LinkedinRedakteur

./: .env.example  .gitignore  README.md  pyproject.toml
apps/cli/: cmd_db.py  cmd_image.py  cmd_onboard.py  cmd_profile.py  cmd_run.py  main.py
apps/dev/: db_setup.py  generate_personas.py  preview_prompts.py  test_image_gen.py
apps/onboarding/: cli.py  inspect_top_posts.py  rich_ui.py  test_gdpr_fetch.py  test_linkedin_fetch.py
migrations/: 0001_init_eve_tables.sql  0002_chat_and_tokens.sql  main.sql
prompts/profiles/: example.yaml
prompts/templates/: eve_system.md.j2  persona.md.j2  wizard_derive_audience.md.j2  wizard_generate_personas.md.j2  wizard_suggest_topics.md.j2
src/eve/: __init__.py
src/eve/adapters/images/: fal_seedream.py
src/eve/adapters/linkedin/: gdpr_export_fetcher.py  playwright_fetcher.py  selectors.yaml
src/eve/adapters/llm/: anthropic_provider.py
src/eve/adapters/messaging/: cli_messenger.py
src/eve/adapters/persistence/: fs_posts_repository.py  fs_prompt_repository.py  in_memory_chat_memory.py  supabase_chat_memory.py  supabase_posts_repository.py  supabase_storage.py
src/eve/agent/: agent.py
src/eve/agent/tools/: __init__.py  base.py  fetch_tool.py  image_tool.py  persona_tool.py  posts_tools.py  time_tool.py
src/eve/config/: __init__.py  container.py  settings.py
src/eve/core/entities/: __init__.py  linkedin.py  llm_message.py  message.py  persona.py  post.py  profile.py  prompt.py  (+1 more)
src/eve/use_cases/: db_migrations.py  message_router.py  profile_verification.py
src/eve/utils/: crypto.py  windows_console.py
tests/unit/: test_crypto.py  test_db_migrations.py  test_gdpr_fetcher.py  test_message_router.py  test_multi_profile.py  test_persona_parser.py  test_posts_storage.py  test_profile_verification.py  test_supabase_settings.py
(+22 files in other folders)
