[project]
name = "eve"
version = "0.1.0"
description = "Eve — LinkedIn Editorial Agent (replaces n8n Manni workflow)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "python-telegram-bot>=21.7",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "openpyxl>=3.1.5",
    "apscheduler>=3.10.4",
    "dependency-injector>=4.42.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "playwright>=1.49.0",
    "rich>=15.0.0",
    "supabase>=2.25.1",
    "cryptography>=48.0.0",
    "typer>=0.26.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]

[project.scripts]
eve = "apps.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eve", "apps"]

[tool.hatch.build.targets.wheel.force-include]
"src/eve/adapters/linkedin/selectors.yaml" = "eve/adapters/linkedin/selectors.yaml"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer nutzt typer.Option() / typer.Argument() als Default — ist offizielles Pattern
"apps/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
